kubernetes/apps/glance/http-route.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: glance-http
spec:
  parentRefs:
    - name: gateway-duckdns-homelab
      sectionName: http
      namespace: gateway-api
  hostnames:
    - "*.${DUCKDNS_DOMAIN}"
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301

---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: glance-https
spec:
  parentRefs:
    - name: gateway-duckdns-homelab
      sectionName: https
      namespace: gateway-api
  hostnames:
    - "*.${DUCKDNS_DOMAIN}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: glance
          port: 8080
